--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,1 @@
-#ƒtƒBƒ‹ƒ^İ’è
-.metadata/*
-.recommenders/*
-.Servers/*
-Servers/*
-RemoteSystemsTempFiles/*
-
-# Java
-*.class
-*.jar
-*.war
-*.ear
-
-# Eclipse
-.project
-.classpath
-.settings
-
-# Idea
-.idea
-*.iml
-*.iws
-*.ipr
-
-# OS
-Thumbs.db
-.DS_Store
-
-# Gradle
-.gradle
-!gradle-wrapper.jar
-
-# Maven
-target
-
-# Build
-out
-build
-bin
-
-# Other
-*.log
-*.swp
-*.bak
+/build/
