--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,44 @@
-/build/
+#ƒtƒBƒ‹ƒ^İ’è
+.metadata/*
+.recommenders/*
+.Servers/*
+Servers/*
+RemoteSystemsTempFiles/*
+
+# Java
+*.class
+*.jar
+*.war
+*.ear
+
+# Eclipse
+.project
+.classpath
+.settings
+.tomcatplugin
+# Idea
+.idea
+*.iml
+*.iws
+*.ipr
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Gradle
+.gradle
+!gradle-wrapper.jar
+
+# Maven
+target
+
+# Build
+out
+build
+bin
+
+# Other
+*.log
+*.swp
+*.bak
